# OperatingSystem

./: CMakeLists.txt  README.md
c/fizzbuzz/: fizzbuzz  fizzbuzz.c  fizzbuzz.txt
c/guessingGame/: guessingGame  guessingGame.c
c/pool/: pool.c  test.txt
fp-multiclient-game/: game.py  network.py  server.py  snake.py
note/:  Feb21  April-23.md  Cache simulation.ipynb  Encoding.md  Feb15.md  Feb26.md  Jan24.md  Jan29.md  Jan31.md  Jan31untitled.java  Mar19.java  Mar27  Mar29.c  Mar5-functional programming.py  RAID.md  lseek_ls_fsync_bufferbloat.md
p1/: README.md
p1/src/main/java/edu/smith/cs/csc262/coopsh/: ShellEnvironment.java
p1/src/main/java/edu/smith/cs/csc262/coopsh/apps/: Echo.java  Head.java  ListFile.java  RegexGrep.java  SetVar.java  SimpleGrep.java  Sort.java  Tail.java  WordCount.java
p1/test/: test.txt  test2.txt
p2/: CMakeLists.txt  README.md  block.h  fits.c  fits.h  input.txt  main.c  memfit  simulation.c  simulation.h
p2/memfit-c/: CMakeLists.txt  Makefile  block.c  block.h  block_test.c  fits.c  fits.h  input.txt  main.c  mainTest.c  simulation.c  simulation.h  test.txt
p3/chatroom_framework/: client.py  server.py
p3/game_framework/: README.md  game.py  network.py  snake.py
